2007-04-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalendarSelector.m ([UIxCalendarSelector
	-calendarFolders]): we now take the list of subscribed calendar
	from the container.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -calendarFoldersInContext:context]): new
	method derived from and replacing [UIxCalView calendarFolders].

2007-03-30  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount
	-toManyRelationshipKeys]): don't put the predefined folders in the
	list if they are returned by the server.

	* UI/MailerUI/UIxMailTree.m ([UIxMailTree -flattenedNodes]): we no
	longer store the "flattenedBlocks" in a dictionary since the
	object will be deleted anyway and we don't need to put the folders
	in cache.

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([UIxMailPartHTMLViewer -_attachmentIds]): take the current
	attachment path into account when computing the part urls.

2007-03-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactsListViewContainer.m
	([UIxContactsListViewContainer -additionalFolders]): take the list
	of subscribed folders from the new property list used for the user
	settings. The value of its key is SubscribedFolders for the
	dictionary entry named "Contacts".

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-canAccessContentAction]): new method to override the one from
	UIxFoldersActions by taking into account the fact that, this time,
	the clientObject is an ldap folder. Removed many method that used
	to be related to the handling of the user selector.

	* UI/Scheduler/UIxCalDayView.m: commented out many unused methods
	to make sure they can be removed.

	* UI/Scheduler/UIxCalView.m ([UIxCalView -_setupCalendarFolders]):
	populate the calendar entries based on the user settings plist.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-selectForMailerAction]): restored method.
